<resources>
    <string name="app_name">Sungka</string>

    <string name="main_menu_one_player">1 Player</string>
    <string name="main_menu_two_player">2 Player</string>
    <string name="main_menu_online">Online</string>
    <string name="main_menu_statistics">Statistics</string>
    <string name="main_menu_about_us">About us</string>
    <string name="main_menu_exit">Exit</string>

    <string name="game_over_again">Play again</string>
    <string name="game_over">GAME OVER</string>
    <string name="game_over_main_menu">Main menu</string>
    <string name="game_over_your_score">Your score</string>
    <string name="game_over_opponent_score">Opponent\'s score</string>
    <string name="simpleBoardPrototype">Simple Board Prototype</string>
    <string name="playerB">Player B</string>
    <string name="playerA">Player A</string>
    <string name="debugging">Debugging</string>
    <string name="Connect">Connect</string>
    <string name="host">Host</string>
    <string name="hostAddress">Host Address:</string>
    <string name="hostPort">Host Port:</string>
    <string name="notConnected">Not Connected</string>
    <string name="team_lynx">Team Lynx</string>
    <string name="awaiting_connection">Awaiting connection...</string>
    <string name="opponent_score">Opponent Score</string>
    <string name="zero">0</string>
    <string name="your_name">Your name:</string>
    <string name="done">Done</string>

    <string name="max_score">Max score:</string>
    <string name="won_games">Games won:</string>
    <string name="lost_games">Games lost:</string>
    <string name="avg_time">Average time:</string>
    <string name="name">Name</string>
    <string name="next_stat">Next</string>
    <string name="prev_stat">Previous</string>
</resources>
