<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_menu_button_one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_one_player" />

        <Button
            android:id="@+id/main_menu_button_two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_two_player"
            android:onClick="gameOption"/>

        <Button
            android:id="@+id/main_menu_button_online"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_online" />

        <Button
            android:id="@+id/main_menu_button_us"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_menu_about_us" />

        <Button
            android:id="@+id/main_menu_button_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_menu_exit" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

</LinearLayout>

