<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/labelHostAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostAddress"/>
        <TextView
            android:id="@+id/txtHostAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/labelHostPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostPort"/>
        <TextView
            android:id="@+id/txtHostPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notConnected"/>

</LinearLayout>