<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_over"
        android:id="@+id/game_over_label"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.40"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="400px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Your Score"
                android:id="@+id/your_score_label"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/your_score"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over_again"
                android:id="@+id/button"
                android:layout_row="1"
                android:layout_column="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over_main_menu"
                android:id="@+id/button2"
                android:layout_row="2"
                android:layout_column="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:minWidth="400px"
            android:measureWithLargestChild="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Opponent Score"
                android:id="@+id/opponent_score_label"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/opponent_score"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>